# website

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: run-rust.yml
src/: main.rs  page.rs
zola/: .gitignore  config.toml
zola/content/: .gitignore  about.md  contact.md  hello.md
zola/content/latest/: _index.md
zola/content/projects/: .gitignore  _index.md
zola/content/repos/: _index.md
zola/sass/: hyde.scss  poole.scss  print.scss
zola/templates/: 404.html  index.html  page.html  project.html  projects.html  repos.html
