[package]
name = "website"
authors = ["LeHuman"]
version = "0.1.0"
edition = "2021"
description = "This is my statically generated website"
repository = "https://github.com/LeHuman/website"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reposcrape = { version = "0.1.2" }
slug = "0.1.6"
tokio = "1.40.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
